--- a/src/styles/general-form.css
+++ b/src/styles/general-form.css
@@ -1,12 +1,35 @@
 .form {
     display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     gap: 20px;
-    padding: 30px 10px;
-    border: solid black
+    padding: 25px 20px;
+    border: solid black;
 }
 
 .form label {
-    margin-right: 6px;
+  margin-right: 6px;
+  font-weight: bold;
+}
+
+form div {
+  display: flex;
+  align-items: center;
+}
+
+input,
+.text-area {
+  min-width: 180px;
+}
+
+.text-area {
+  height: 60px;
+}
+
+.formBtns {
+  display: flex;
+  margin: auto;
+  gap: 30px;
 }
 
 h1 {
@@ -19,15 +42,20 @@ h1 {
 
 .cv-container {
   margin-top: 50px;
-  width: 30vw;
-  height: 75vh;
+  min-width: 800px;
+  /* min-height: 75vh; */
+  padding: 20px 80px;
   border: solid black;
 }
 
 .general {
   text-align: right;
+  min-height: 100px;
 }
 
 .education {
   text-align: center;
+}
+p {
+  visibility: visible;
 }
