--- a/src/styles/general-form.css
+++ b/src/styles/general-form.css
@@ -5,6 +5,7 @@
     gap: 20px;
     padding: 25px 20px;
     border: solid black;
+    background-color: rgb(236, 237, 242);
 }
 
 .form label {
@@ -24,6 +25,7 @@ input,
 
 .text-area {
   height: 60px;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 .formBtns {
@@ -38,19 +40,22 @@ h1 {
 }
 
 
+
 /* RESUME */
 
 .cv-container {
   margin-top: 50px;
   min-width: 800px;
-  /* min-height: 75vh; */
-  padding: 20px 80px;
+  background-color: rgb(163, 231, 241);
+  padding-bottom: 20px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   border: solid black;
 }
 
 .general {
   text-align: right;
   min-height: 100px;
+  margin-right: 20px;
 }
 
 .education,
