--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 70px;
   margin-left: 3vw;
   padding-right: 2vw;
   border-right: solid black 8px;
